arreglando estrellas y botones con hover

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 				<img class="alinear" src="assets/images/profile.png" alt="" >
 				<section class="col-12"></section>
 				<section class="col-12 " ><h1 id="menu" class="alinear familiafuente ">START BOOTSTRAP</h1></section>
-				<section class="col-12 " ><i class="fa fa-minus" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"><i class="fa fa-minus" aria-hidden="true"></i></i></section>
+				<section class="col-12 " ><img src="assets/images/portfolio/restar.png" alt="" class="raya"><img src="assets/images/portfolio/estrella.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/restar.png" alt="" ></section>
 				<section class="col-12 " ><p class="alinear familiafuentedos tamano">Web Developer - Graphic Artist - User Experience Designer</p></section>
-
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
 
 			</section>
 
@@ -47,10 +49,15 @@
 		<!--termina el home-->
 
 		<section class="row alinear">
+			<section class="col-12"></section>
+			<section class="col-12"></section>
+			<section class="col-12"></section>
 			<section class="col-12"> <h1 class="familiafuente subtitulo">PORTFOLIO</h1></section>
-			<section class="col-12 " ><i class="fa fa-minus" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"><i class="fa fa-minus" aria-hidden="true"></i></i></section>
+			<section class="col-12 " ><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
 			<section class="col-1-5"></section>
-			<section class="col-3"><img src="assets/images/portfolio/cabin.png" alt="" width="100%"></section>
+
+			<section class="col-3"><img src="assets/images/portfolio/cabin.png" alt="" class="image" width="100%"></section>
+
 			<section class="col-3"><img src="assets/images/portfolio/cake.png" alt="" width="100%"></section>
 			<section class="col-3"><img src="assets/images/portfolio/circus.png" alt="" width="100%"></section>
 <section class="col-1-5"></section>
@@ -64,69 +71,96 @@
 	<section class="col-3"><img src="assets/images/portfolio/safe.png" alt="" width="100%"></section>
 	<section class="col-3"><img src="assets/images/portfolio/submarine.png" alt="" width="100%"></section>
 <section class="col-1-5"></section>
-
+<section class="col-12"></section>
+<section class="col-12"></section>
+<section class="col-12"></section>
 </section>
+
 <!--termina seccion de portfolio-->
 
 <section class="row color fuente alinear">
+	<section class="col-12"></section>
+	<section class="col-12"></section>
+	<section class="col-12"></section>
 	<section class="col-12 "><h1 class="fuente alinear familiafuente subtitulo">ABOUT</h1></section>
-	<section class="col-12 " ><i class="fa fa-minus" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"><i class="fa fa-minus" aria-hidden="true"></i></i></section>
-	<section class="col-2"></section>
-	<section class="col-4"><p class="familiafuentedos">Freelancer is a free bootstrap theme created by Start Bootstrap.
+	<section class="col-12 " ><img src="assets/images/portfolio/restar.png" alt="" class="raya"><img src="assets/images/portfolio/estrella.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/restar.png" alt="" ></section>
+	<section class="col-3"></section>
+	<section class="col-3"><p class="familiafuentedos contacto">Freelancer is a free bootstrap theme created by Start Bootstrap.
 		The download includes the complete source files including HTML, CSS, and
 		JavaScript as well as optional LESS stylesheets for easy customization.</p></section>
-		<section class="col-4"><p class="familiafuentedos">Whether you're a student looking to showcase your work, a professional looking to attract clients,
+		<section class="col-3"><p class="familiafuentedos contacto">Whether you're a student looking to showcase your work, a professional looking to attract clients,
 			or a graphic artist looking to share your projects, this template is the perfect starting point!</p></section>
-			<section class="col-12"><i class="fa fa-download" aria-hidden="true"></i><span class="familiafuentedos">Download Theme</span></section>
-
+			<section class="col-12"><span class="boton3"><i class="fa fa-download " aria-hidden="true"></i><span class="familiafuentedos ">Download Theme</span></span></section>
+			<section class="col-12"></section>
+			<section class="col-12"></section>
+			<section class="col-12"></section>
 </section>
 
 <!-- termina seccion de about -->
 
-<section class="row alinear">
-	<section class="col-12"><h1 class="familiafuente subtitulo">CONTACT ME</h1></section>
-	<section class="col-12 " ><i class="fa fa-minus" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"><i class="fa fa-minus" aria-hidden="true"></i></i></section>
+<section class="row">
+	<section class="col-12"></section>
+	<section class="col-12"></section>
+	<section class="col-12"></section>
+	<section class="col-12"><h1 class="familiafuente subtitulo  alinear">CONTACT ME</h1></section>
+	<section class="col-12  alinear" ><img src="assets/images/portfolio/raya2.png" alt="" class="raya"><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
 <section class="col-2"></section>
 <section class="col-8">
 	<form>
 
-  <input type="text" id="fname" name="fname" placeholder="Name">
+  <input type="text" id="fname" name="fname" placeholder="Name"  class="formulario">
 
-  <input type="email" id="lname" name="lname" placeholder="Email Address">
+  <input type="email" id="lname" name="lname" placeholder="Email Address" class="formulario">
 
-	<input type="tel" id="lname" name="lname" placeholder="Phone Number">
+	<input type="tel" id="lname" name="lname" placeholder="Phone Number" class="formulario">
 
-	 <textarea placeholder="Message"></textarea>
-	 <button type="submit" name="button">SEND</button>
+	 <textarea placeholder="Message"  class="formulario"></textarea>
+	 <button type="submit" name="button" class="boton1 fuente" onsubmit="return validacion()">Send</button>
+
 </form>
+
 </section>
+
+<section class="col-12"></section>
+<section class="col-12"></section>
+<section class="col-12"></section>
 </section>
 
 <!--Termina la seccion contact-->
 <footer>
 <section class="row fuente alinear">
-	<section class="col-4">
+	<section class="col-12"></section>
+	<section class="col-12"></section>
+	<section class="col-1"></section>
+	<section class="col-3">
+
+
 		<h1 class="familiafuente tamano">LOCATION</h1>
-		<p class="familiafuentedos contacto">3481 Melrose Place
+		<p class="familiafuentedos contacto">3481 Melrose Place<br>
 Beverly Hills, CA 90210</p>
 	</section>
-	<section class="col-4">
+	<section class="col-1"></section>
+	<section class="col-2-5 alinear">
 		<h1 class="familiafuente tamano">AROUND THE WEB</h1>
-		<i class="fa fa-facebook" aria-hidden="true"></i>
-		<i class="fa fa-google-plus" aria-hidden="true"></i>
-		<i class="fa fa-twitter" aria-hidden="true"></i>
-		<i class="fa fa-linkedin" aria-hidden="true"></i>
-		<i class="fa fa-dribbble" aria-hidden="true"></i>
+		<span class="circulo alinear"><i class="fa fa-facebook" aria-hidden="true"></i></span>
+		<span class="circulo"><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+		<span class="circulo"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+		<span class="circulo"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+		<span class="circulo"><i class="fa fa-dribbble" aria-hidden="true"></i></span>
 	</section>
-	<section class="col-4">
+		<section class="col-1"></section>
+	<section class="col-3">
 		<h1 class="familiafuente tamano">ABOUT FREELANCER</h1>
 		<p class="familiafuentedos contacto">Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap.</p>
 	</section>
+	<section class="col-1"></section>
 
 </section>
 </footer>
 
 <section class="row end fuente alinear">
+	<section class="col-12"></section>
+
 	<section class="col-12"><h3 class="familiafuentedos copy">  Copyright © Your Website 2016 </h3></section>
 
 </section>
@@ -134,6 +168,9 @@ Beverly Hills, CA 90210</p>
 		</article>
 
 	<!-- Enlaza aquí tu archivo JS -->
+	<script type="text/javascript" src="js/app.js">
+
+	</script>
 
 </body>
 </html>
