funcionando el modal

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 			<section class="col-12 " ><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
 			<section class="col-1-5"></section>
 
-			<section class="col-3"><img src="assets/images/portfolio/cabin.png" alt="" class="image" width="100%"></section>
+			<section class="col-3"><img class="imagen"src="assets/images/portfolio/cabin.png" alt="" class="image" width="100%"></section>
 
-			<section class="col-3"><img src="assets/images/portfolio/cake.png" alt="" width="100%"></section>
-			<section class="col-3"><img src="assets/images/portfolio/circus.png" alt="" width="100%"></section>
+			<section class="col-3"><img class="imagen" src="assets/images/portfolio/cake.png" alt="" width="100%"></section>
+			<section class="col-3"><img class="imagen" src="assets/images/portfolio/circus.png" alt="" width="100%"></section>
 <section class="col-1-5"></section>
 
 </section>
@@ -67,9 +67,9 @@
 <section class="row ">
 
 	<section class="col-1-5"></section>
-	<section class="col-3"><img src="assets/images/portfolio/game.png" alt="" width="100%"></section>
-	<section class="col-3"><img src="assets/images/portfolio/safe.png" alt="" width="100%"></section>
-	<section class="col-3"><img src="assets/images/portfolio/submarine.png" alt="" width="100%"></section>
+	<section class="col-3"><img class="imagen" src="assets/images/portfolio/game.png" alt="" width="100%"></section>
+	<section class="col-3"><img class="imagen" src="assets/images/portfolio/safe.png" alt="" width="100%"></section>
+	<section class="col-3"><img class="imagen" src="assets/images/portfolio/submarine.png" alt="" width="100%"></section>
 <section class="col-1-5"></section>
 <section class="col-12"></section>
 <section class="col-12"></section>
@@ -164,6 +164,13 @@ Beverly Hills, CA 90210</p>
 	<section class="col-12"><h3 class="familiafuentedos copy">  Copyright © Your Website 2016 </h3></section>
 
 </section>
+
+
+			<div id="myModal" class="modal">
+			<span class="close">&times;</span>
+			<div id="modal-content">
+				<img id="imagensota" style="100%">
+			</div>
 
 		</article>
 
