arreglando indentacion y opacidad

--- a/index.html
+++ b/index.html
@@ -1,183 +1,166 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Freelancer</title>
-	<!-- Enlaza aquí tu CSS común y de tu proyecto -->
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<link rel="stylesheet" href="fuentes/css/font-awesome.min.css">
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Freelancer</title>
+		<!-- Enlaza aquí tu CSS común y de tu proyecto -->
+		<link rel="stylesheet" href="css/common.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link rel="stylesheet" href="fuentes/css/font-awesome.min.css">
 
-</head>
-<body>
-	<!-- Escribe tu código aquí -->
-	<article class="menu container"> >
-		<header>
-
-			<section class="row familiafuente">
-				<section class="col-1"></section>
-				<section class="col-2"><a href="#" class="text -uppercase link">START BOOTSTRAP</a></section>
-				<section class="col-3"></section>
-				<section class="col-1"><a href="#" class="text -uppercase link">Portfolio</a></section>
-				<section class="col-1"><a href="#" class="text -uppercase link">About</a></section>
-
-				<section class="col-1"><a href="#" class="text -uppercase link">Contact</a></section>
-			</section>
-		</header>
-		<!--Termina el nav-->
-		<section class="row color fuente">
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-			<section class="col-12" align="center">
-				<img class="alinear" src="assets/images/profile.png" alt="" >
+	</head>
+	<body>
+		<!-- Escribe tu código aquí -->
+		<article class="menu container"> >
+			<header>
+				<section class="row familiafuente">
+					<section class="col-1"></section>
+					<section class="col-2"><a href="#" class="text -uppercase link ac">START BOOTSTRAP</a></section>
+					<section class="col-3"></section>
+					<section class="col-1"><a  href="#" class="text -uppercase link ac">Portfolio</a></section>
+					<section class="col-1"><a  href="#" class="text -uppercase link ac">About</a></section>
+					<section class="col-1"><a  href="#" class="text -uppercase link ac">Contact</a></section>
+				</section>
+			</header>
+			<!--Termina el nav-->
+			<section class="row color fuente">
 				<section class="col-12"></section>
-				<section class="col-12 " ><h1 id="menu" class="alinear familiafuente ">START BOOTSTRAP</h1></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12" align="center">
+					<img class="alinear" src="assets/images/profile.png" alt="" >
+					<section class="col-12"></section>
+					<section class="col-12 " ><h1 id="menu" class="alinear familiafuente ">START BOOTSTRAP</h1></section>
+					<section class="col-12 " ><img src="assets/images/portfolio/restar.png" alt="" class="raya"><img src="assets/images/portfolio/estrella.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/restar.png" alt="" ></section>
+					<section class="col-12 " ><p class="alinear familiafuentedos tamano">Web Developer - Graphic Artist - User Experience Designer</p></section>
+					<section class="col-12"></section>
+					<section class="col-12"></section>
+					<section class="col-12"></section>
+				</section>
+			</section>
+			<!--termina el home-->
+			<section class="row alinear">
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12"> <h1 class="familiafuente subtitulo">PORTFOLIO</h1></section>
+				<section class="col-12 " ><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
+				<section class="col-1-5"></section>
+				<section class="col-3 contenedor-img">
+					<img class="imagen"src="assets/images/portfolio/cabin.png" alt="" class="image" width="100%">
+
+				</section>
+
+				<section class="col-3"><img class="imagen" src="assets/images/portfolio/cake.png" alt="" width="100%"></section>
+				<section class="col-3"><img class="imagen" src="assets/images/portfolio/circus.png" alt="" width="100%"></section>
+				<section class="col-1-5"></section>
+			</section>
+
+			<section class="row ">
+				<section class="col-1-5"></section>
+				<section class="col-3"><img class="imagen" src="assets/images/portfolio/game.png" alt="" width="100%"></section>
+				<section class="col-3"><img class="imagen" src="assets/images/portfolio/safe.png" alt="" width="100%"></section>
+				<section class="col-3"><img class="imagen" src="assets/images/portfolio/submarine.png" alt="" width="100%"></section>
+				<section class="col-1-5"></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+			</section>
+			<!--termina seccion de portfolio-->
+			<section class="row color fuente alinear">
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12"></section>
+				<section class="col-12 "><h1 class="fuente alinear familiafuente subtitulo">ABOUT</h1></section>
 				<section class="col-12 " ><img src="assets/images/portfolio/restar.png" alt="" class="raya"><img src="assets/images/portfolio/estrella.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/restar.png" alt="" ></section>
-				<section class="col-12 " ><p class="alinear familiafuentedos tamano">Web Developer - Graphic Artist - User Experience Designer</p></section>
-				<section class="col-12"></section>
-				<section class="col-12"></section>
-				<section class="col-12"></section>
-
-			</section>
-
-
-		</section>
-
-		<!--termina el home-->
-
-		<section class="row alinear">
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-			<section class="col-12"> <h1 class="familiafuente subtitulo">PORTFOLIO</h1></section>
-			<section class="col-12 " ><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
-			<section class="col-1-5"></section>
-
-			<section class="col-3"><img class="imagen"src="assets/images/portfolio/cabin.png" alt="" class="image" width="100%"></section>
-
-			<section class="col-3"><img class="imagen" src="assets/images/portfolio/cake.png" alt="" width="100%"></section>
-			<section class="col-3"><img class="imagen" src="assets/images/portfolio/circus.png" alt="" width="100%"></section>
-<section class="col-1-5"></section>
-
-</section>
-
-<section class="row ">
-
-	<section class="col-1-5"></section>
-	<section class="col-3"><img class="imagen" src="assets/images/portfolio/game.png" alt="" width="100%"></section>
-	<section class="col-3"><img class="imagen" src="assets/images/portfolio/safe.png" alt="" width="100%"></section>
-	<section class="col-3"><img class="imagen" src="assets/images/portfolio/submarine.png" alt="" width="100%"></section>
-<section class="col-1-5"></section>
-<section class="col-12"></section>
-<section class="col-12"></section>
-<section class="col-12"></section>
-</section>
-
-<!--termina seccion de portfolio-->
-
-<section class="row color fuente alinear">
-	<section class="col-12"></section>
-	<section class="col-12"></section>
-	<section class="col-12"></section>
-	<section class="col-12 "><h1 class="fuente alinear familiafuente subtitulo">ABOUT</h1></section>
-	<section class="col-12 " ><img src="assets/images/portfolio/restar.png" alt="" class="raya"><img src="assets/images/portfolio/estrella.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/restar.png" alt="" ></section>
-	<section class="col-3"></section>
-	<section class="col-3"><p class="familiafuentedos contacto">Freelancer is a free bootstrap theme created by Start Bootstrap.
-		The download includes the complete source files including HTML, CSS, and
-		JavaScript as well as optional LESS stylesheets for easy customization.</p></section>
-		<section class="col-3"><p class="familiafuentedos contacto">Whether you're a student looking to showcase your work, a professional looking to attract clients,
-			or a graphic artist looking to share your projects, this template is the perfect starting point!</p></section>
-			<section class="col-12"><span class="boton3"><i class="fa fa-download " aria-hidden="true"></i><span class="familiafuentedos ">Download Theme</span></span></section>
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-			<section class="col-12"></section>
-</section>
-
-<!-- termina seccion de about -->
-
-<section class="row">
-	<section class="col-12"></section>
-	<section class="col-12"></section>
-	<section class="col-12"></section>
-	<section class="col-12"><h1 class="familiafuente subtitulo  alinear">CONTACT ME</h1></section>
-	<section class="col-12  alinear" ><img src="assets/images/portfolio/raya2.png" alt="" class="raya"><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
-<section class="col-2"></section>
-<section class="col-8">
-	<form>
-
-  <input type="text" id="fname" name="fname" placeholder="Name"  class="formulario">
-
-  <input type="email" id="lname" name="lname" placeholder="Email Address" class="formulario">
-
-	<input type="tel" id="lname" name="lname" placeholder="Phone Number" class="formulario">
-
-	 <textarea placeholder="Message"  class="formulario"></textarea>
-	 <button type="submit" name="button" class="boton1 fuente" onsubmit="return validacion()">Send</button>
-
-</form>
-
-</section>
-
-<section class="col-12"></section>
-<section class="col-12"></section>
-<section class="col-12"></section>
-</section>
-
-<!--Termina la seccion contact-->
-<footer>
-<section class="row fuente alinear">
-	<section class="col-12"></section>
-	<section class="col-12"></section>
-	<section class="col-1"></section>
-	<section class="col-3">
-
-
-		<h1 class="familiafuente tamano">LOCATION</h1>
-		<p class="familiafuentedos contacto">3481 Melrose Place<br>
-Beverly Hills, CA 90210</p>
-	</section>
-	<section class="col-1"></section>
-	<section class="col-2-5 alinear">
-		<h1 class="familiafuente tamano">AROUND THE WEB</h1>
-		<span class="circulo alinear"><i class="fa fa-facebook" aria-hidden="true"></i></span>
-		<span class="circulo"><i class="fa fa-google-plus" aria-hidden="true"></i></span>
-		<span class="circulo"><i class="fa fa-twitter" aria-hidden="true"></i></span>
-		<span class="circulo"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-		<span class="circulo"><i class="fa fa-dribbble" aria-hidden="true"></i></span>
-	</section>
-		<section class="col-1"></section>
-	<section class="col-3">
-		<h1 class="familiafuente tamano">ABOUT FREELANCER</h1>
-		<p class="familiafuentedos contacto">Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap.</p>
-	</section>
-	<section class="col-1"></section>
-
-</section>
-</footer>
-
-<section class="row end fuente alinear">
-	<section class="col-12"></section>
-
-	<section class="col-12"><h3 class="familiafuentedos copy">  Copyright © Your Website 2016 </h3></section>
-
-</section>
-
-
-			<div id="myModal" class="modal">
-			<span class="close">&times;</span>
-			<div id="modal-content">
-				<img id="imagensota" style="100%">
-			</div>
-
+				<section class="col-3"></section>
+				<section class="col-3"><p class="familiafuentedos contacto">Freelancer is a free bootstrap theme created by Start Bootstrap.
+					The download includes the complete source files including HTML, CSS, and
+					JavaScript as well as optional LESS stylesheets for easy customization.</p></section>
+					<section class="col-3"><p class="familiafuentedos contacto">Whether you're a student looking to showcase your work, a 	     professional looking to attract clients,
+						or a graphic artist looking to share your projects, this template is the perfect starting point!</p></section>
+						<section class="col-12"><span class="boton3"><i class="fa fa-download " aria-hidden="true"></i><span class="familiafuentedos ">Download Theme</span></span></section>
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+					</section>
+					<!-- termina seccion de about -->
+					<section class="row">
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+						<section class="col-12"><h1 class="familiafuente subtitulo  alinear">CONTACT ME</h1></section>
+						<section class="col-12  alinear" ><img src="assets/images/portfolio/raya2.png" alt="" class="raya"><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella"><img class="raya"src="assets/images/portfolio/raya2.png" alt="" ></section>
+						<section class="col-2"></section>
+						<section class="col-8">
+							<form >
+								<span class="invisible" id="nombre">Name</span><input type="text" id="name" name="fname" placeholder="Name"  class="formulario">
+								<span class="invisible" id="mail">Name</span><input type="text" id="email" name="lname" placeholder="Email Address" class="formulario">
+								<span class="invisible" id="tel">Name</span><input type="tel" id="phone" name="lname" placeholder="Phone Number" class="formulario">
+								<span class="invisible" id="mensaje1">Name</span><textarea id="mensaje" placeholder="Message"  class="formulario"></textarea>
+								<button  id="botonformulario" type="button" name="button" class="boton1 fuente" >Send</button>
+							</form>
+						</section>
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+						<section class="col-12"></section>
+					</section>
+					<!--Termina la seccion contact-->
+					<footer>
+						<section class="row fuente alinear">
+							<section class="col-12"></section>
+							<section class="col-12"></section>
+							<section class="col-1"></section>
+							<section class="col-3">
+								<h1 class="familiafuente tamano">LOCATION</h1>
+								<p class="familiafuentedos contacto">3481 Melrose Place<br>
+									Beverly Hills, CA 90210</p>
+								</section>
+								<section class="col-1"></section>
+								<section class="col-2-5 alinear">
+									<h1 class="familiafuente tamano">AROUND THE WEB</h1>
+									<span class="circulo alinear"><i class="fa fa-facebook" aria-hidden="true"></i></span>
+									<span class="circulo"><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+									<span class="circulo"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+									<span class="circulo"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+									<span class="circulo"><i class="fa fa-dribbble" aria-hidden="true"></i></span>
+								</section>
+								<section class="col-1"></section>
+								<section class="col-3">
+									<h1 class="familiafuente tamano">ABOUT FREELANCER</h1>
+									<p class="familiafuentedos contacto">Freelance is a free to use, open source Bootstrap theme created by
+										<a class="amodal" href="https://sellfy.com/p/809P/jV3VZ">Start Bootstrap</a>.</p>
+									</section>
+									<section class="col-1"></section>
+								</section>
+							</footer>
+							<section class="row end fuente alinear">
+								<section class="col-12"></section>
+								<section class="col-12"><h3 class="familiafuentedos copy">  Copyright © Your Website 2016 </h3></section>
+							</section>
+							<div id="myModal" class="modal">
+								<span class="close">&times;</span>
+								<div id="modal-content">
+									<h1 class=" alinear familiafuente subtitulo">PROJECT TITLE</h1>
+									<section class="row alinear">
+										<img class="raya "src="assets/images/portfolio/raya2.png" alt="" ><img src="assets/images/portfolio/estrellan.png" alt="" class="estrella "><img class="raya "src="assets/images/portfolio/raya2.png" alt="" >
+										<img id="imagensota" style="100%">
+									</section>
+									<p class=" contacto familiafuentedos medida">Use this area of the page to describe your project. The icon above is part of a free icon set by "<a class="amodal" href="https://sellfy.com/p/809P/jV3VZ">Flat Icons</a>" On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+									</p>
+									<span class="spanmodal copy familiafuentedos"> Client: <a class="amodal" href="https://sellfy.com/p/809P/jV3VZ">Start Bootstrap</a></span>
+									<span  class=" spanmodal copy familiafuentedos"> Date: <a class="amodal" href="https://sellfy.com/p/809P/jV3VZ">April 2014</a></span>
+									<span class=" spanmodal copy familiafuentedos">Service: <a class="amodal" href="https://sellfy.com/p/809P/jV3VZ">Web Development</a></span>
+									<div class="alinear">
+										<button type="button" class="botoncerrar " name="button"><i class="fa fa-times" aria-hidden="true"></i>Close</button>
+									</div>
+								</div>
+							</div>
 		</article>
-
-	<!-- Enlaza aquí tu archivo JS -->
-	<script type="text/javascript" src="js/app.js">
-
-	</script>
-
-</body>
-</html>
+		<!-- Enlaza aquí tu archivo JS -->
+		<script type="text/javascript" src="js/app.js">
+		</script>
+	</body>
+	</html>
